--- a/index.html
+++ b/index.html
@@ -10,7 +10,34 @@
 </head>
 
 <body>
+    <h1>House Music Quiz</h1>
+    <section class="quiz_container" id="quiz-app">
+        <div class="quiz_heading">
+            <h2 id="questionaire">Question Section</h2>
+            <ul>
+                <li>
+                    <input type="radio" name="answer" id="a" class="answer">
+                    <label for="a" id="a_answer">Answer</label>
+                </li>
 
+                <li>
+                    <input type="radio" name="answer" id="b" class="answer">
+                    <label for="b" id="b_answer">Answer</label>
+                </li>
+
+                <li>
+                    <input type="radio" name="answer" id="c" class="answer">
+                    <label for="c" id="c_answer">Answer</label>
+                </li>
+
+                <li>
+                    <input type="radio" name="answer" id="d" class="answer">
+                    <label for="d" id="d_answer">Answer</label>
+                </li>
+            </ul>
+
+        </div>
+    </section>
     <script src="assets/js/script.js"></script>
 </body>
 
