Add submit button

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
             </ul>
 
         </div>
+        <button id="" submit>Submit</button>
     </section>
     <script src="assets/js/script.js"></script>
 </body>
