--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </ul>
 
         </div>
-        <button id="" submit>Submit</button>
+        <button class="btn" id="submit" submit>Submit</button>
     </section>
     <script src="assets/js/script.js"></script>
 </body>
