--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
             </ul>
 
         </div>
-        <button class="btn" id="submit" submit>Submit</button>
+    </section>
+    <hr />
+    <button class="btn" id="submit" submit>Submit</button>
     </section>
     <script src="assets/js/script.js"></script>
 </body>
