--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="House music quiz designed to test your house music knowledge">
+    <meta name="keywords" content="house music quiz, quiz, house music, music quiz">
+
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="icon" type="image/x-icon" href="/assets/images/favicon2.ico">
     <title>House Music Quiz</title>
@@ -19,6 +22,7 @@
         </a>
     </div>
     <script src="assets/js/script.js"></script>
+    <script src="assets/js/questions.js"></script>
 </body>
 
 </html>
