--- a/quiz.html
+++ b/quiz.html
@@ -47,7 +47,8 @@
         </div>
     </div>
     </section>
-    <script src="assets/js/script.js"></script>
+    <script type="module" src="assets/js/questions.js"></script>
+    <script type="module" src="assets/js/script.js"></script>
 </body>
 
 </html>
