indent html and add additional comments

--- a/index.html
+++ b/index.html
@@ -2,18 +2,24 @@
 <html lang="en">
 
 <head>
+    <!-- Metadata -->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="House music quiz designed to test your house music knowledge">
     <meta name="keywords" content="house music quiz, quiz, house music, music quiz">
-
+    
+    <!-- Link to external CSS file for styling -->
     <link rel="stylesheet" href="assets/css/style.css">
+    <!-- Fav Icon Link-->
     <link rel="icon" type="image/x-icon" href="/assets/images/favicon2.ico">
+    <!-- Page Title -->
     <title>House Music Quiz</title>
+    <!-- Quiz Main Heading -->
     <h1>House Music Quiz</h1>
 </head>
 <body>
+    <!-- Quiz Subheading -->
     <h2>It's time to test your house music knowledge!!!</h2>
     <div id="start-quiz">
         <a href="quiz.html" class="btn">
