tidy up of js and readme

--- a/quiz.html
+++ b/quiz.html
@@ -29,22 +29,22 @@
             <ul>
                 <!-- Answer option A -->
                 <li>
-                    <input type="radio" name="answer" id="a" class="answer">
+                    <input type="radio" name="answer" id="0" class="answer">
                     <label for="a" id="a_answer">Answer</label>
                 </li>
                 <!-- Answer option B -->
                 <li>
-                    <input type="radio" name="answer" id="b" class="answer">
+                    <input type="radio" name="answer" id="1" class="answer">
                     <label for="b" id="b_answer">Answer</label>
                 </li>
                 <!-- Answer option C -->
                 <li>
-                    <input type="radio" name="answer" id="c" class="answer">
+                    <input type="radio" name="answer" id="2" class="answer">
                     <label for="c" id="c_answer">Answer</label>
                 </li>
                 <!-- Answer option D -->
                 <li>
-                    <input type="radio" name="answer" id="d" class="answer">
+                    <input type="radio" name="answer" id="3" class="answer">
                     <label for="d" id="d_answer">Answer</label>
                 </li>
             </ul>
