final alterations to code and readme proof read

--- a/quiz.html
+++ b/quiz.html
@@ -20,6 +20,7 @@
 </head>
 
 <body>
+    <form id="quiz-form">
     <!-- Quiz container section -->
     <section class="quiz_container" id="quiz-app">
         <!-- Quiz heading and question section -->
@@ -51,10 +52,11 @@
 
         </div>
     </section>
+    </form>
     <hr />
     <!-- Submit button and score display section -->
     <div>
-        <button class="btn" id="submit" submit>Submit</button>
+        <button type="button"  class="btn" id="submit" type="button">Submit</button>
         <!-- Score display -->
         <div class="score">Score:
             <span id="score-card">0</span>
